fix scrollbars appearing while dragging

--- a/src/styles.styl
+++ b/src/styles.styl
@@ -46,6 +46,7 @@ $full
 
     &__interactable-area
         @extend $full
+        overflow hidden
 
     &__point-base
         position absolute
